# Changelog
Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [UNRELEASED] -- XXXX-XX-XX
* JOOQViewService ignoriert Cases -> Bei Privilegienprüfung ist Case egal
* Extensions werden ausgeführt, egal ob Cases der Namen zusammenpassen

## [12.64.1] -- 2023-06-15
* In CAS Prozeduren die Last* Spalten fühlen, um Truncated Fehler auf Azure zu vermeiden.
* Helper-Version in Manifest an Helper-pom anpassen.
* Gemeinsame GitHub Workflows aus https://github.com/minova-afis/aero.minova.os.github.workflows verwenden.
* JOOQViewService kann nun mit 'OR'-Fällen umgehen. Vorher konnte er Queries nur mit 'AND' verbinden.

## [12.63.10] -- 2023-06-05
* Helper-Manifest ausbessern

## [12.63.9] -- 2023-06-02
* Workflow ReleaseAppAndHelper veröffentlicht die Dockerfile auf Docker.io

## [12.63.8] -- 2023-06-02
* Helper Version Updaten
* Workflow ReleaseAppAndHelper korrigiert
* Tycho-Version im Client auf 3.0.4 erhöhen

## [12.63.7] -- 2023-06-02
* Abschneiden von Daten beim Setup direkt in der Methode processSqlProcedureRequest erlauben

## [12.63.1 - 12.63.6] -- 2023-06-01
* Abschneiden von Daten beim Setup ermöglichen (LastUser von AZURE zu lang)

## [12.62.0] -- 2023-05-25
* Reihenfolge der `Setup.xml` Aufrufe wird nun mittels eines Graphen ermittelt, 3rd Party Libraries werden ignoriert.
* Eventhandling von Ncore für Extensions über `aero.minova.service.event.dispatcher` bereitstellen.
* Abschneiden von Daten beim Setup ermöglichen (LastUser von AZURE zu lang)

## [12.61.3] -- 2023-05-23
* Release Workflow korrigieren, so dass DOCKERFILE wieder auf Docker.io gepushed wird

## [12.61.2] -- 2023-05-23
* PasswordEncoderExtension entfernen, Passwort schon im Helper verschlüsseln
* Update auf SpringBoot 3.1.0.
* Bei View-Anfragen die Zeit von Instants und LocalDates mit beachten
* Für Azure Authentifiezierung fehlende Lib hinzufügen

## [12.61.1] -- 2023-05-12