@@ -15,7 +15,6 @@ import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import aero.minova.cas.CoreApplicationSystemApplication;
@@ -24,16 +23,13 @@ import aero.minova.cas.api.domain.DataType;
 import aero.minova.cas.api.domain.Row;
 import aero.minova.cas.api.domain.Table;
 import aero.minova.cas.api.domain.Value;
-import aero.minova.cas.controller.BaseTest;
 import aero.minova.cas.sql.SqlUtils;
 import lombok.val;
 
 //benötigt, damit JUnit-Tests nicht abbrechen
-@SpringBootTest(classes = CoreApplicationSystemApplication.class, properties = { "application.runner.enabled=false" })
-class MSSQLViewServiceTest extends BaseTest {
-
-	@Autowired
-	MssqlViewService testSubject;
+@SpringBootTest(classes = CoreApplicationSystemApplication.class, properties = {	"application.runner.enabled=false",
+																					"spring.datasource.url=jdbc:h2:mem:testdb;IGNORECASE=true" })
+class MSSQLViewServiceTest extends ViewServiceBaseTest<MssqlViewService> {
 
 	@DisplayName("Wähle Einträge ohne Einschränkungen aus.")
 	@Test
