@@ -6,6 +6,7 @@ Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog
 ## [UNRELEASED] -- XXXX-XX-XX
 * JOOQViewService ignoriert Cases -> Bei Privilegienprüfung ist Case egal
 * Extensions werden ausgeführt, egal ob Cases der Namen zusammenpassen
+* Basis-Test für ViewServiceInterface-Implementierungen
 
 ## [12.64.1] -- 2023-06-15
 * In CAS Prozeduren die Last* Spalten fühlen, um Truncated Fehler auf Azure zu vermeiden.
